<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_keyboard_backspace"
        android:title="Back"
        app:showAsAction="always"/>

    <item android:id="@+id/add_fav"
        android:title="@string/add_fav"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"
        />

    <item android:id="@+id/home"
        android:title="@string/home"
        />
    <item android:id="@+id/ordenar_valoracion"
        android:title="@string/ordenar_valoracion"
        />
    <item android:id="@+id/eliminar_fav"
        android:title="@string/eliminar_fav"
        />
    <item android:id="@+id/cerca_de_mi"
        android:title="@string/cerca_de_mi"
        />

</menu>